--- a/css/responsivo600.css
+++ b/css/responsivo600.css
@@ -79,4 +79,7 @@
         margin: 10px;
         font-weight: bolder;
     }
+    .mynavbar {
+        background-color: rgba(0, 0, 0, 0.9);
+    }
 }
