--- a/css/responsivo900.css
+++ b/css/responsivo900.css
@@ -1,5 +1,7 @@
 @media only screen and (max-width: 900px) {
-
+    html{
+        background: black !important;
+    }
     ol,
     ul {
         padding: 0px !important;
@@ -19,7 +21,7 @@
         width: 100%;
         top: 90px;
         right: 0px;
-        background-color: rgba(0, 0, 0, 0.6);
+        background-color: rgba(0, 0, 0, 0.9);
         transition: 0.6s;
         z-index: 1000;
         align-items: center;
@@ -41,7 +43,7 @@
 
 
     .li_nav {
-        margin-top: 10vh;
+        margin-top: 5vh;
         margin-left: 0 !important;
     }
 
@@ -96,6 +98,9 @@
     #nav.active #hamburger::after {
         transform: rotate(-135deg);
         top: -7px;
+    }
+    .mynavbar {
+        background-color: rgba(0, 0, 0, 0.9);
     }
 
     .div-buttons {
@@ -429,27 +434,6 @@
         opacity: 0;
     }
 
-    ::-webkit-scrollbar {
-        width: 13px;
-        height: 13px;
-    }
-
-
-    ::-webkit-scrollbar-thumb {
-        background: linear-gradient(40deg, #FF006C 14%, #FF622C 64%);
-        border-radius: 10px;
-    }
-
-    ::-webkit-scrollbar-thumb:hover {
-        background: linear-gradient(40deg, #FF006C 14%, #FF622C 64%);
-    }
-
-    ::-webkit-scrollbar-track {
-        background: #ffffff;
-        border-radius: 10px;
-        box-shadow: inset 0px 0px 0px 0px #f0f0f0;
-    }
-
     /* .carousel_desktop{
         display: none !important;
     } */
@@ -469,4 +453,10 @@
         display: flex;
         justify-content: end;
     }
+    .button_telegram{
+        font-size: 1.8vw;
+        height: 75px !important;
+        
+    }
 }
+
