--- a/css/responsivo900.css
+++ b/css/responsivo900.css
@@ -1,7 +1,8 @@
 @media only screen and (max-width: 900px) {
     html{
-        background: black !important;
+        background: #000 !important;
     }
+
     ol,
     ul {
         padding: 0px !important;
@@ -19,7 +20,7 @@
         display: flex;
         position: absolute;
         width: 100%;
-        top: 90px;
+        top: 68px;
         right: 0px;
         background-color: rgba(0, 0, 0, 0.9);
         transition: 0.6s;
@@ -99,8 +100,11 @@
         transform: rotate(-135deg);
         top: -7px;
     }
+
     .mynavbar {
         background-color: rgba(0, 0, 0, 0.9);
+        height: 68px;
+            
     }
 
     .div-buttons {
@@ -113,21 +117,6 @@
     #text {
         width: 76vw;
     }
-
-    #button_title {
-        display: flex;
-        text-align: center;
-        font-size: 10vw;
-        font-weight: 900;
-    }
-
-    #h2-phrase {
-        display: flex;
-        align-items: center;
-        font-size: 8vw;
-        width: 76vw;
-    }
-
     #second_title {
         margin-top: 22px;
         display: flex;
@@ -148,6 +137,7 @@
     #iframe_desktop {
         display: none;
     }
+
     .button-gradient {
         margin: 10px;
         justify-content: space-between;
@@ -169,7 +159,7 @@
         margin: 10px;
         justify-content: space-between;
         font-size: 16px;
-        font-weight: 900;
+        font-weight: 100;
         width: 59vw !important;
         height: 46px !important;
     }
@@ -177,10 +167,11 @@
     #paragraph {
         text-decoration: underline;
         margin: 10px;
+        font-size: 12px;
+        font-weight: 700;
     }
 
     #logo {
-        width: 118vw;
         height: 3vh;
         margin: 10px;
     }
@@ -194,14 +185,8 @@
     }
 
     #mobile_column_1 {
-        font-size: 18px;
+        font-size: 17px;
         text-align: right;
-    }
-
-    .p-celular_r {
-        width: 40vw;
-        text-align: right;
-        margin-top: 10px;
     }
 
     .apr-column1 {
@@ -210,7 +195,7 @@
         justify-content: space-between;
         /* justify-content: space-around; */
         margin-top: 0em;
-        height: 72em;
+        height: 78em;
         max-width: 40vw;
     }
 
@@ -236,9 +221,9 @@
         width: 223px;
     }
 
-    #mobile_column_1_l {
+    /* #mobile_column_1_l {
         font-size: 18px;
-    }
+    } */
 
     .apr_mobile_ {
         display: flex;
@@ -288,12 +273,16 @@
         font-size: 10vw;
         font-weight: 900;
     }
-
     #h2-phrase {
         display: flex;
         align-items: center;
         font-size: 7vw;
         width: 78vw;
+        height: 0.2vh;;
+        margin-bottom: 29px;
+    }
+    .carousel-indicators .active{
+        display: none;
     }
 
     #second_title {
@@ -314,30 +303,19 @@
         display: none;
     }
 
-     #iframe_mobile {
+    #iframe_mobile {
         display: inline !important;
-        width: 82vw !important;
-        height: 26vh !important;
-        border-radius: 31px;
-    } 
+        width: 96vw !important;
+        height: 27vh !important;
+        border-radius: 5px;
+    }
 
     .assistant_iframe {
         height: 100vh;
     }
 
-    .gradient_font {
-        font-size: 25px;
-        font-weight: bold;
-    }
-
     .gradient_mobile {
         font-size: 22px;
-        font-weight: bold;
-    }
-
-    #paragraph {
-        text-decoration: underline;
-        text-align: center;
     }
 
     #paragraph_second {
@@ -349,12 +327,6 @@
         font-weight: bolder;
     }
 
-    #logo {
-        width: 118vw;
-        height: 3vh;
-        margin: 10px;
-    }
-
     .apr_mobile_ {
         display: flex;
         flex-direction: column;
@@ -363,19 +335,13 @@
     }
 
     .p-celular_r {
-        width: 33vw;
+        width: 37vw;
         text-align: right;
         margin-top: 10px;
     }
 
     #apr_desktop_two {
         display: none;
-    }
-
-    .p-celular_l {
-        width: 40vw;
-        text-align: left;
-        margin-top: 10px;
     }
 
     .mobile_other_side {
@@ -453,10 +419,10 @@
         display: flex;
         justify-content: end;
     }
-    .button_telegram{
+
+    .button_telegram {
         font-size: 1.8vw;
         height: 75px !important;
-        
+
     }
 }
-
